[package]
name = "nonos-tui"
version = "0.1.0"
edition = "2021"
authors = ["NØNOS Team <ek@nonos.systems>"]
description = "Terminal User Interface for NØNOS Kernel Management"
repository = "https://github.com/NON-OS/nonos-kmi-"
license = "AGPL-3.0"
keywords = ["nonos", "tui", "kernel", "security", "microkernel"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = []
kernel-crypto = ["nonos_kernel"]

[dependencies.nonos_kernel]
path = "../"
optional = true

[dependencies]
# TUI framework
ratatui = "0.24"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }

# JSON/Config handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Command line interface
clap = { version = "4.4", features = ["derive", "color", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File system operations
walkdir = "2.0"
notify = "6.1"

# Process management
which = "4.4"

# Colors and styling
owo-colors = "3.5"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# System info
sysinfo = "0.29"
dirs = "5.0"
tokio-util = { version = "0.7", features = ["io"] }
# Crypto dependencies for TUI testing (std-compatible fallbacks)
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.0"
rand = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4"
crossbeam-channel = "0.5"

# NØNOS kernel integration (conditional)
# nonos_kernel = { path = "../", optional = true, default-features = false, features = ["std", "crypto-core", "crypto-ed25519-dalek"] }

[dev-dependencies]
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
